fix spacing on error detail page

--- a/src/components/ErrorDetail/ErrorDetail.css
+++ b/src/components/ErrorDetail/ErrorDetail.css
@@ -1,8 +1,9 @@
 .error-detail-container {
   width: 80%;
   margin: 0 auto;
+  margin-bottom: 20px;
   background-color: white;
-  padding: 30px;
+  padding: 30px 30px 10px 30px;
   border: 2px solid #d3d3d3;
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
